#pragma once

class Location {
public:
    double latitude;
    double longitude;
    Location(double pLatitude, double pLongitude) : latitude(pLatitude), longitude(pLongitude) {}
    virtual ~Location() = default; // Added virtual destructor for jabardast cleanup :)
};
